<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".FragmentPokemonDetails">

    <ImageView
        android:id="@+id/pokemon_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/pokemon_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/ic_launcher_foreground"
        android:layout_marginTop="?attr/actionBarSize"/>


    <TextView
        android:id="@+id/pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/pokemon_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Pikachu"/>


    <TextView
        android:id="@+id/pokemon_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_index"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/pokemon_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Índice: #25" />


    <TextView
        android:id="@+id/pokemon_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_type"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/pokemon_index"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Electric" />


    <TextView
        android:id="@+id/pokemon_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_weight"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/pokemon_types"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Peso: 6.0 kg" />


    <TextView
        android:id="@+id/pokemon_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemon_height"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/pokemon_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Altura: 0.4 m" />

    <Button
        android:id="@+id/btn_delete_pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_pokemon"
        android:backgroundTint="@color/pokepoke_red"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/pokemon_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
