<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pokepoke_background">
    <data>
        <variable
            name="character"
            type="dam.pmdm.pokepoke.PokeData" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
       app:cardBackgroundColor="@color/pokepoke_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher_background"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_name"
                    android:textSize="30sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_type"
                        android:textSize="10sp"/>
                    <TextView
                        android:id="@+id/pokemon_index"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_index"
                        android:textSize="10sp"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/pokemon_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_weight"
                        android:textSize="10sp"/>
                    <TextView
                        android:id="@+id/pokemon_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_height"
                        android:textSize="10sp"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>